SE-1881: Fixed note that referred to CFD

--- a/examples/use-cases/instruments/Equity Option.ipynb
+++ b/examples/use-cases/instruments/Equity Option.ipynb
@@ -159,7 +159,7 @@
     "\n",
     "## 2.1 Create the underlying instruments\n",
     "\n",
-    "In order to create a derivative on an instrument, we must first create that underlying instrument. As we are planning to create CFDs based on Amazon and Apple, we will upsert the underlying stocks first."
+    "In order to create a derivative on an instrument, we must first create that underlying instrument. As we are planning to create a physically settled option on Amazon, we will upsert the underlying stock first."
    ]
   },
   {
@@ -204,7 +204,7 @@
    "source": [
     "## 2.2 Create the Equity Option\n",
     "\n",
-    "Now that we have created the underlying stocks, we can create a function to upsert equity options in LUSID."
+    "Now that we have created the underlying stock, we can create a function to upsert equity options in LUSID."
    ]
   },
   {
